[project]
name = "girder-job-sequence"
version = "0.2.4"
description = "Utility package for running Girder jobs in a sequence."
authors = [
    {name = "Sam Border",email = "sam.border2256@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "girder-client (>=3.2.8,<4.0.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
    "uuid (>=1.30,<2.0)",
    "lxml (>=5.3.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
